# DSPLab

./: .gitignore  LICENSE  Makefile  README.md  main.cpp  meson.build
core/Generators/: Generator.h  SineGenerator.cpp  SineGenerator.h
core/Processing/: FFT.cpp  FFT.h  STFT.cpp  STFT.h  SignalOps.cpp  SignalOps.h
core/Signal/: Signal.cpp  Signal.h
ui/: App.cpp  App.h  ConsoleUI.cpp  ConsoleUI.h
